Prepare release 0.1.0-alpha2.

--- a/test/spec-runner.html
+++ b/test/spec-runner.html
@@ -29,6 +29,7 @@
     <script type="text/javascript" src="setup/html-injector.js"></script>
 
     <!-- Required libraries -->
+    <script type="text/javascript" src='../bower_components/jquery/dist/jquery.js'></script>
     <script type="text/javascript" src='../bower_components/underscore/underscore.js'></script>
     <script type="text/javascript" src='../bower_components/backbone/backbone.js'></script>
     <script type="text/javascript" src='../bower_components/backbone.paginator/lib/backbone.paginator.js'></script>
@@ -36,6 +37,7 @@
     <script type="text/javascript">
         var Hal = {};
     </script>
+    <script type="text/javascript" src="../src/embedded/embedded.js"></script>
     <script type="text/javascript" src="../src/link/link.js"></script>
     <script type="text/javascript" src="../src/link/link-array.js"></script>
     <script type="text/javascript" src="../src/link/links.js"></script>
