* Fix documentation, we talked about a `middleUrl` parameter but it was `urlMiddle`  * Fix several serialization / deserialization bugs.

--- a/test/spec-runner.html
+++ b/test/spec-runner.html
@@ -51,6 +51,7 @@
 
     <script type="text/javascript" src="spec/collection.js"></script>
     <script type="text/javascript" src="spec/model.js"></script>
+    <script type="text/javascript" src="spec/embedded/embedded.js"></script>
     <script type="text/javascript" src="spec/link/link-array.js"></script>
     <script type="text/javascript" src="spec/link/link.js"></script>
 
