--- a/index.html
+++ b/index.html
@@ -2,30 +2,39 @@
 layout: default
 ---
 
-{% for post in paginator.posts %}
-<div class="article">
-    <div class="well">
-        <h1><a href="{{ site.baseurl}}{{ post.url }}">{{ post.date | date: "%b %-d, %Y" }} - {{ post.title }}</a></h1>
-        {% if site.comments == true and post.comments == true and site.disqus != '' %}
-          <p class="author"><a href="{{ site.baseurl }}{{ post.url }}/#disqus_thread">Comments</a></p>
-        {% endif %}
-        <div class="content">
-            {{ post.content }}
-        </div>
-    </div>
-</div>
-{% endfor %}
+<br/>
 
-<div class="pagination">
-  {% if paginator.previous_page %}
-      {% if paginator.previous_page == 1 %}
-        <a class="btn btn-default" href="{{ site.baseurl}}/index.html" class="previous">Newer</a>
-      {% else %}
-        <a class="btn btn-default" href="{{ site.baseurl}}/page{{ paginator.previous_page }}" class="previous">Newer</a>
-      {% endif %}
-  {% endif %}
-  <span class="page_number ">Page: {{ paginator.page }} of {{ paginator.total_pages }}</span>
-  {% if paginator.next_page %}
-    <a class="btn btn-default" href="{{ site.baseurl}}/page{{ paginator.next_page }}" class="next">Older</a>
-  {% endif %}
+<div class="article">
+    <div class="panel">
+	    <div class="panel-body" style="padding: 15px 55px;">
+	        <h1>
+	            <p>backbone.hateoas</p>
+	            <small>HATEOAS with Backbone</small>
+	        </h1>
+	        <p>
+	            <img src="https://img.shields.io/travis/gomoob/backbone.hateoas.svg" />
+	            <img src="https://img.shields.io/coveralls/gomoob/backbone.hateoas.svg" />
+	            <img src="https://img.shields.io/github/release/gomoob/backbone.hateoas.svg" />
+	        </p>
+            <p>
+	            backbone.hateoas is a Javascript library which facilitates the use of the HAL (Hypertext Application 
+	            Language) standard in your application.
+            </p>
+            
+            <h2>
+                <a id="user-content-getting-started" href="#getting-started" style="margin-left: -40px; opacity: 1;">
+                    <span class="glyphicon glyphicon-link" aria-hidden="true"></span>
+                </a>
+                Getting started
+            </h2>
+            <h3>The HAL standard</h3>
+            <p>
+                The HAL specification is quickly described here 
+                <a href="http://stateless.co/hal_specification.html" target="_blank">HAL - Hypertext Application 
+                Language</a>, the JSON version of HAL has also been published as an internet draft here : 
+                <a href="https://tools.ietf.org/html/draft-kelly-json-hal-06" target="_blank">JSON Hypertext Application 
+                Language</a>.
+            </p>
+	    </div>
+    </div>
 </div>
