Udpate release history to add the new release of the version `0.1.0-beta.2`

--- a/index.html
+++ b/index.html
@@ -432,6 +432,17 @@ users.getNextPage();
             <h2 id="links">Links</h2>
             
             <h2 id="release-history">Release history</h2>
+            <h3 id="0.1.0-beta.2">0.1.0-beta.2</h3>
+            <ul>
+                <li>
+                    Fix <a href="https://github.com/gomoob/backbone.hateoas/issues/5" target="_blank">#5</a> - 
+                    toJSON() fails on embedded resources after an unsetEmbedded() call has been done.
+                </li>
+                <li>
+                    Fix <a href="https://github.com/gomoob/backbone.hateoas/issues/8" target="_blank">#8</a> - 
+                    Null or undefined links should be authorized.
+                </li>
+            </ul>
             <h3 id="0.1.0-beta.1">0.1.0-beta.1</h3>
             <ul>
                 <li>
