Update release history.

--- a/index.html
+++ b/index.html
@@ -432,6 +432,12 @@ users.getNextPage();
             <h2 id="links">Links</h2>
             
             <h2 id="release-history">Release history</h2>
+            <h3 id="0.1.0-beta.3">0.1.0-beta.3</h3>
+            <ul>
+                <li>
+                    First version published on http://npmjs.org, this version do not add any new functionality.
+                </li>
+            </ul>
             <h3 id="0.1.0-beta.2">0.1.0-beta.2</h3>
             <ul>
                 <li>
