Fix Improve error management #25

--- a/test/spec-runner.html
+++ b/test/spec-runner.html
@@ -37,6 +37,8 @@
     <script type="text/javascript">
         var Hal = {};
     </script>
+    <script type="text/javascript" src="../src/error.js"></script>
+    <script type="text/javascript" src="../src/error-handler.js"></script>
     <script type="text/javascript" src="../src/embedded/embedded.js"></script>
     <script type="text/javascript" src="../src/link/link.js"></script>
     <script type="text/javascript" src="../src/link/link-array.js"></script>
